objects/MetaraceAdjustment__mdt/MetaraceAdjustment__mdt.object-meta.xml
<CustomObject>
    <label>MetaraceAdjustment</label>
    <pluralLabel>MetaraceAdjustments</pluralLabel>
</CustomObject>