objects/MetaraceAdjustment__mdt/fields/Bonus__c.field-meta.xml
<CustomField>
    <fullName>Bonus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this adjustment is a bonus to modify the natural value, false if it should be considered part of the natural value</description>
    <label>Bonus</label>
    <type>Checkbox</type>
</CustomField>