objects/MetaraceAdjustment__mdt/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Body__c</fullName>
                <default>true</default>
                <label>Body__c</label>
            </value>
            <value>
                <fullName>Strength__c</fullName>
            </value>
            <value>
                <fullName>Quickness__c</fullName>
            </value>
            <value>
                <fullName>Willpower__c</fullName>
            </value>
            <value>
                <fullName>Charisma__c</fullName>
            </value>
            <value>
                <fullName>Intelligence__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>