objects/MetaraceAdjustment__mdt/fields/MetaraceTemplate__c.field-meta.xml
<CustomField>
    <fullName>MetaraceTemplate__c</fullName>
    <label>MetaraceTemplate</label>
    <referenceTo>MetaraceTemplate__mdt</referenceTo>
    <relationshipName>AdjustmentTemplates</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>