objects/MetaraceAdjustment__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metarace</fullName>
                <default>true</default>
                <label>Metarace</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>